<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_text_first_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_value"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_text_second_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_value"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_calc_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition" />

    <Button
        android:id="@+id/btn_calc_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division" />

</LinearLayout>